tests/bad_netpols/subdir4/netpols.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: shippingservice-netpol
spec:
  egress: []
  ingress:
  - from: #[{}] # bad from rule
    - {}
    ports:
    - port: 50051
  - from:
    - podSelector:
        matchLabels:
          app: frontend
    ports:
    - port: 50051
  podSelector:
    matchLabels:
      app: shippingservice
  policyTypes:
  - Ingress
  - Egress
